# modernc

./: .gitignore  CMakeLists.txt
include/: k_error.h  k_fileio.h  k_maths.h  merge_sort.h  rat.h
src/: k_file_io.c  main.c
src/mergesort/: merge_sort.c
src/rat/: rat.c
